# hogwarts_apitest

./: .travis.yml  README.md  pyproject.toml
hogwarts_apitest/: api.py
tests/: test_core.py
tests/api/: httpbin.py
