[tool.poetry]
name = "hogwarts_apitest"
version = "0.1.0"
description = "An api test framework with requests and pytest."
authors = ["cyliu1991 <cyliu1991@163.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
coveralls = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
